package com.mhm.action.state;

/**
 * @author MHm
 * @date 2020-4-19 20:40
 */
public interface IState {
    public void action(StateContext stateContext);
}
